# L1C-XSP-IMACS-CCPC-analysis

./: .gitignore  CMOD5_NRCS.ipynb  PRUN_readme  README.md  convert_l1c.pbs  find_mean_inc_angle.py  lister_L1C.ipynb  one_xspectra_plot.py  plot_MACS_modulation_azimu_wrt_lambda_windpseed.py  pyproject.toml  wind_inversion_functions.py
CCPC_figures/: figures_ccpc_azi_modulation.py
L1B_data_discover/: ex_map_sar_s0_allsw.ipynb  map_slice_v2.ipynb  xspectra_visu.ipynb
L1B_nc_conversion_L1C_csv/: exe_convert_l1c.bash  l1c_conversion_orig.py
L1C_nc_conversion_L1C_csv/: convert_l1c.pbs  convert_l1c.py  exe_convert_l1c.bash  l1c_conversion_approp.py  l1c_conversion_product3.7.py
df_generation/: df_generation_1day.ipynb  df_generation_1month.ipynb  df_generation_allsw.ipynb  df_generation_onesw.ipynb
l1canalysis/: CMOD5_NRCS.ipynb  MACS_2nd_analysis_S1b.ipynb  __init__.py  config.yml  map_sar_IMACS_slice.ipynb  utils.py
l1canalysis/CCPC_figures/: figures_ccpc_azi_modulation.py
l1canalysis/L1B_data_discover/: ex_map_sar_s0_onesw.ipynb
l1canalysis/L1C_nc_conversion_L1C_csv/: PRUN_readme.md  convert_l1c.pbs  convert_l1c.py  exe_convert_l1c.bash  l1c_B07_conversion.py  l1c_conversion_product3.7.py  l1c_conversion_stepbystep.ipynb  lister_L1C.ipynb
l1canalysis/MACS_figures/: plot_MACS_azimuth_modulation.py  plot_MACS_map.py  plot_MACS_modulation_azimu_wrt_lambda_windpseed.py  plot_MACS_wrt_incidence.py
l1canalysis/NRCS_figures/: figures_nrcs_azimuth_modulation.py
l1canalysis/df_generation/: df_generation_1day.ipynb  df_generation_1month.ipynb  df_generation_allsw.ipynb
l1canalysis/miscellaneous/: one_xspectra_plot.py  wind_inversion_functions.py
l1canalysis/test/: test_verif_nrcs_figure.py
map_SAR_variables_toolkit/Notebooks/: example_map_sar.ipynb
map_SAR_variables_toolkit/plot_tools/: maps.py
map_SAR_variables_toolkit/sar_tools/: sar.py
python_scripts/: find_mean_inc_angle.py
(+1 files in other folders)
